<resources>
    <string name="app_name">AppGate</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="btn_Registrar">Registrar</string>
    <string name="btn_Actualizar">Actualizar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_Editar">Editar</string>
    <string name="btn_Eliminar">Eliminar</string>
    <string name="btn_Mostrar">Mostrar</string>
    <string name="btn_Salir">Salir</string>
    <string name="registrarte">Registrarte</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="title_Editar">Editar Cuenta</string>
    <string name="title_Registrar">Registrar Cuenta</string>
    <string name="title_Mostrar">Usuarios Registrados</string>
    <string name="title_bienvenida">Hola </string>

    <string name="error_campos_vacios">ERROR: Campos vacios</string>
    <string name="ok_registro_exitoso">Registro Exitoso!</string>
    <string name="ok_actualizacion_exitosa">Actualización Exitosa!</string>
    <string name="ok_datos_correctos">Datos Correctos</string>
    <string name="ok_eliminar_usuario">Se eliminó correctamente el usuario</string>
    <string name="error_eliminar_usuario">ERROR: No se pudo eliminar el usuario</string>
    <string name="error_usuario_ya_registrado">ERROR: Usuario ya registrado</string>
    <string name="error_usuario_no_actualizar">ERROR: Usuario no se puede actualizar</string>
    <string name="error_usuario_incorrecto">ERROR: Usuario y/o Contraseña incorrectas</string>
    <string name="error_password">ERROR: La contraseña debe tener minimo 8 caracteres, donde incluya mayúscula, minúscula, número y caracteres especiales</string>

    <string name="alert_msg">Esta seguro de eliminar la cuenta?</string>
</resources>