<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- Botones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_margin="2dp"
                android:text="@string/btn_Editar"
                android:textSize="12dp"
                android:textStyle="bold"
                android:theme="@style/FormButton2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/btn_Eliminar"
                android:layout_margin="2dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:theme="@style/FormButton1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/btn_Mostrar"
                android:layout_margin="2dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:theme="@style/FormButton2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/btn_Salir"
                android:layout_margin="2dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:theme="@style/FormButton1" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textSize="35dp"
                android:textStyle="bold"
                android:text="@string/title_bienvenida"/>

        </LinearLayout>






    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>