<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/title_Editar"/>

            <!-- EditText Usuario y Contraseña-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <!-- Registrar Usuario-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editUser1"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editUser2"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <!-- Registrar Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPass1"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pass">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPass2"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Registrar Nombre-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editName1"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editName2"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <!-- Registrar Apellido-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editLastname1"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/apellido">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editLastname2"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Botones-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp"
                    android:text="@string/btn_Cancelar"
                    android:layout_weight="3"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:theme="@style/FormButton2" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_actualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp"
                    android:text="@string/btn_Actualizar"
                    android:layout_weight="3"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:theme="@style/FormButton1" />


            </LinearLayout>


        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>